--- a/FatedQuest.Libraries/XmlDocument/XmlDocument.vcxproj
+++ b/FatedQuest.Libraries/XmlDocument/XmlDocument.vcxproj
@@ -236,6 +236,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Logger\Logger.vcxproj">
+      <Project>{40283b7b-524e-4753-9617-ff1da95cd9d0}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\StandardOperations\StandardOperations.vcxproj">
+      <Project>{1ae9e9be-b55d-4c31-8a6f-7f3220e8d538}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\StoredDocument\StoredDocument.vcxproj">
       <Project>{f54f462a-6a7e-4273-8f91-9098242ae380}</Project>
     </ProjectReference>
