--- a/SuperGameEngine/Engine/Engine.vcxproj
+++ b/SuperGameEngine/Engine/Engine.vcxproj
@@ -216,7 +216,9 @@
     <ClInclude Include="Engine\Basic\SuperGameTime.h" />
     <ClInclude Include="Engine\Basic\ExtremelyWeakWrapper.h" />
     <ClInclude Include="Engine\Content\ContentManager.h" />
+    <ClInclude Include="Engine\Content\SceneStorageCache.h" />
     <ClInclude Include="Engine\Content\SuperContentManager.h" />
+    <ClInclude Include="Engine\Content\SuperSceneStorageCache.h" />
     <ClInclude Include="Engine\Content\SuperTextureManager.h" />
     <ClInclude Include="Engine\Content\TextureManager.h" />
     <ClInclude Include="Engine\Factory\EngineEntryFactory.h" />
@@ -249,6 +251,8 @@
     <ClInclude Include="Structural\GameObject\SuperGameObject.h" />
     <ClInclude Include="Structural\InternalComponents\SpriteComponent\SpriteComponent.h" />
     <ClInclude Include="Structural\InternalComponents\TestComponent\TestComponent.h" />
+    <ClInclude Include="Structural\Loaders\SceneLoader.h" />
+    <ClInclude Include="Structural\Loaders\SuperSceneLoader.h" />
     <ClInclude Include="Structural\Packages\ComponentLoadPackage.h" />
     <ClInclude Include="Structural\Packages\GrandScenePackage.h" />
     <ClInclude Include="Structural\Packages\GameObjectLoadPackage.h" />
@@ -271,6 +275,7 @@
     <ClCompile Include="EngineEntry\EngineEntry.cpp" />
     <ClCompile Include="Engine\Basic\SuperGameTime.cpp" />
     <ClCompile Include="Engine\Content\SuperContentManager.cpp" />
+    <ClCompile Include="Engine\Content\SuperSceneStorageCache.cpp" />
     <ClCompile Include="Engine\Content\SuperTextureManager.cpp" />
     <ClCompile Include="Engine\Factory\EngineEntryFactory.cpp" />
     <ClCompile Include="Engine\Factory\EngineFactory.cpp" />
@@ -302,6 +307,7 @@
     <ClCompile Include="Structural\GameObject\SuperGameObject.cpp" />
     <ClCompile Include="Structural\InternalComponents\SpriteComponent\SpriteComponent.cpp" />
     <ClCompile Include="Structural\InternalComponents\TestComponent\TestComponent.cpp" />
+    <ClCompile Include="Structural\Loaders\SuperSceneLoader.cpp" />
     <ClCompile Include="Structural\Packages\SuperComponentLoadPackage.cpp" />
     <ClCompile Include="Structural\Packages\SuperGrandScenePackage.cpp" />
     <ClCompile Include="Structural\Packages\SuperGameObjectLoadPackage.cpp" />
