--- a/FatedQuest.Libraries/StoredDocument/StoredDocument.vcxproj
+++ b/FatedQuest.Libraries/StoredDocument/StoredDocument.vcxproj
@@ -146,12 +146,18 @@
   <ItemGroup>
     <ClInclude Include="AllReferences.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="ModifiableAttribute.h" />
+    <ClInclude Include="ModifiableDocument.h" />
+    <ClInclude Include="ModifiableNode.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="StoredDocument.h" />
     <ClInclude Include="StoredDocumentAttribute.h" />
     <ClInclude Include="StoredDocumentNode.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ModifiableAttribute.cpp" />
+    <ClCompile Include="ModifiableDocument.cpp" />
+    <ClCompile Include="ModifiableNode.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
