--- a/SuperGameEngine/EngineTests/EngineTests.vcxproj.filters
+++ b/SuperGameEngine/EngineTests/EngineTests.vcxproj.filters
@@ -11,6 +11,12 @@
     <ClCompile Include="Structural\Spatial\Area\RectangleTests.cpp">
       <Filter>Structural\Spatial\Area</Filter>
     </ClCompile>
+    <ClCompile Include="Structural\Loaders\SuperSceneLoaderCreateTests.cpp">
+      <Filter>Structural\Loaders</Filter>
+    </ClCompile>
+    <ClCompile Include="Structural\Loaders\SuperSceneLoaderSaveTests.cpp">
+      <Filter>Structural\Loaders</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
@@ -24,6 +30,9 @@
     </Filter>
     <Filter Include="Structural\Spatial\Area">
       <UniqueIdentifier>{f352fab8-d884-4e79-9e1e-1f9c9bd2ca73}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Structural\Loaders">
+      <UniqueIdentifier>{5e3bb9b1-f1ca-4b73-a3a6-0239aab3071b}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
