--- a/SuperGameEngine/Engine/Engine.vcxproj.filters
+++ b/SuperGameEngine/Engine/Engine.vcxproj.filters
@@ -339,6 +339,9 @@
     <ClInclude Include="Engine\Content\SuperSceneStorageCache.h">
       <Filter>Header Files\Engine\Content</Filter>
     </ClInclude>
+    <ClInclude Include="Structural\Packages\EnginePackageConverter.h">
+      <Filter>Header Files\Structural\Packages</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -460,6 +463,9 @@
     </ClCompile>
     <ClCompile Include="Engine\Content\SuperSceneStorageCache.cpp">
       <Filter>Source Files\Engine\Content</Filter>
+    </ClCompile>
+    <ClCompile Include="Structural\Packages\EnginePackageConverter.cpp">
+      <Filter>Source Files\Structural\Packages</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
