--- a/FatedQuest.Libraries/XmlDocument/XmlDocument.vcxproj
+++ b/FatedQuest.Libraries/XmlDocument/XmlDocument.vcxproj
@@ -211,6 +211,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="AllReferences.h" />
+    <ClInclude Include="Converters\RapidDocumentToXml.h" />
     <ClInclude Include="FatedQuestLibraries.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
@@ -220,6 +221,7 @@
     <ClInclude Include="RapidXMLNode.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Converters\RapidDocumentToXml.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Tools_Debug|x64'">Create</PrecompiledHeader>
