[#98] Added tree view implementation

--- a/SuperGameEngine/SuperGameEngine/imgui.ini
+++ b/SuperGameEngine/SuperGameEngine/imgui.ini
@@ -11,21 +11,21 @@ DockId=0xC0DFADC4,1
 
 [Window][My Window]
 Pos=312,19
-Size=310,353
+Size=1679,1064
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Logger Output]
-Pos=0,374
-Size=622,284
+Pos=0,1085
+Size=1991,284
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
-Pos=0,374
-Size=622,284
+Pos=312,19
+Size=1679,1064
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000006,1
 
 [Window][Delete?]
 Pos=434,312
@@ -98,20 +98,30 @@ Collapsed=0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1191,658
+Size=2560,1369
 Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=310,353
+Size=310,1064
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector Window]
-Pos=624,19
-Size=567,639
+Pos=1993,19
+Size=567,1350
 Collapsed=0
 DockId=0x00000004,0
+
+[Window][Tree Example]
+Pos=463,612
+Size=575,395
+Collapsed=0
+
+[Window][Draggable Tree]
+Pos=60,60
+Size=427,225
+Collapsed=0
 
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
@@ -196,11 +206,11 @@ Column 0  Width=55
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace       ID=0x14621557 Window=0x3DA2F1DE Pos=0,19 Size=1191,639 Split=X
+DockSpace       ID=0x14621557 Window=0x3DA2F1DE Pos=0,19 Size=2560,1350 Split=X
   DockNode      ID=0x00000003 Parent=0x14621557 SizeRef=1991,701 Split=Y
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1280,1064 Split=X Selected=0x85FD66EC
       DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=310,498 Selected=0xB8729153
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1679,498 CentralNode=1 Selected=0x85FD66EC
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1679,498 CentralNode=1 Selected=0x5E5F7166
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1280,284 Selected=0x086A1005
   DockNode      ID=0x00000004 Parent=0x14621557 SizeRef=567,701 Selected=0xB576AE73
 DockSpace       ID=0xC0DFADC4 Pos=0,19 Size=1280,701 CentralNode=1 Selected=0x4A68580B
