--- a/SuperGameEngine/SuperGameEngine/imgui.ini
+++ b/SuperGameEngine/SuperGameEngine/imgui.ini
@@ -210,7 +210,7 @@ DockSpace       ID=0x14621557 Window=0x3DA2F1DE Pos=0,19 Size=2560,1350 Split=X
   DockNode      ID=0x00000003 Parent=0x14621557 SizeRef=1991,701 Split=Y
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1280,1064 Split=X Selected=0x85FD66EC
       DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=310,498 Selected=0xB8729153
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1679,498 CentralNode=1 Selected=0x5E5F7166
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=1679,498 CentralNode=1 Selected=0x85FD66EC
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1280,284 Selected=0x086A1005
   DockNode      ID=0x00000004 Parent=0x14621557 SizeRef=567,701 Selected=0xB576AE73
 DockSpace       ID=0xC0DFADC4 Pos=0,19 Size=1280,701 CentralNode=1 Selected=0x4A68580B
