--- a/FatedQuest.Libraries/StandardObjectsTests/StandardObjectsTests.vcxproj
+++ b/FatedQuest.Libraries/StandardObjectsTests/StandardObjectsTests.vcxproj
@@ -164,6 +164,9 @@
     <ProjectReference Include="..\Logger\Logger.vcxproj">
       <Project>{40283b7b-524e-4753-9617-ff1da95cd9d0}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\SharedEnums\SharedEnums.vcxproj">
+      <Project>{231d6f13-1d66-435d-adf1-810e7ebb056a}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\StandardObjects\StandardObjects.vcxproj">
       <Project>{3f3ccd80-0310-46b9-a963-285eac938cd6}</Project>
     </ProjectReference>
