--- a/Tools/SuperGenerator/SuperGenerator/SuperGenerator/SuperGenerator.vcxproj
+++ b/Tools/SuperGenerator/SuperGenerator/SuperGenerator/SuperGenerator.vcxproj
@@ -129,15 +129,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DebugLogger.cpp" />
     <ClCompile Include="SuperGenerator.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DebugLogger.h" />
     <ClInclude Include="FatedQuestLibraries.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\FatedQuest.Libraries\SharedEnums\SharedEnums.vcxproj">
+      <Project>{231d6f13-1d66-435d-adf1-810e7ebb056a}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\SuperEnumGenerator\SuperEnumGenerator.vcxproj">
       <Project>{7e141bab-0c83-497e-a3ad-49349e2ffd22}</Project>
     </ProjectReference>
