[#98] You can now add tree view items with/without icons and control open/close behaviour.

--- a/SuperGameEngine/Tools/Tools.vcxproj
+++ b/SuperGameEngine/Tools/Tools.vcxproj
@@ -238,6 +238,8 @@
     <ClInclude Include="ToolsEngine\ViewElements\MenuView.h" />
     <ClInclude Include="ToolsEngine\ViewElements\TreeView.h" />
     <ClInclude Include="ToolsEngine\ViewElements\TreeViewItem.h" />
+    <ClInclude Include="ToolsEngine\ViewElements\TreeViewItemCollapsibleBehaviour.h" />
+    <ClInclude Include="ToolsEngine\ViewElements\TreeViewItemCollapsibleIcon.h" />
     <ClInclude Include="Windows\DockableContainer\DockableContainer.h" />
     <ClInclude Include="Windows\GameViewport\GameViewport.h" />
     <ClInclude Include="Windows\InspectorWindow\InspectorWindow.h" />
