[#98] Added ability to listen to whether an item is selected.

--- a/SuperGameEngine/SuperGameEngine/imgui.ini
+++ b/SuperGameEngine/SuperGameEngine/imgui.ini
@@ -10,10 +10,10 @@ Collapsed=0
 DockId=0xC0DFADC4,1
 
 [Window][My Window]
-Pos=325,19
-Size=960,650
+Pos=332,19
+Size=953,650
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000007,1
 
 [Window][Logger Output]
 Pos=0,671
@@ -22,10 +22,10 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
-Pos=325,19
-Size=960,650
+Pos=332,19
+Size=953,650
 Collapsed=0
-DockId=0x00000006,1
+DockId=0x00000007,0
 
 [Window][Delete?]
 Pos=434,312
@@ -103,9 +103,9 @@ Collapsed=0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=323,650
+Size=330,650
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000006,0
 
 [Window][Inspector Window]
 Pos=1287,19
@@ -121,6 +121,11 @@ Collapsed=0
 [Window][Draggable Tree]
 Pos=60,60
 Size=427,225
+Collapsed=0
+
+[Window][MyModal]
+Pos=729,442
+Size=101,71
 Collapsed=0
 
 [Table][0x51D6F5EA,3]
@@ -208,9 +213,9 @@ Column 1  Weight=2.0000
 [Docking][Data]
 DockSpace       ID=0x14621557 Window=0x3DA2F1DE Pos=0,19 Size=1628,936 Split=X
   DockNode      ID=0x00000003 Parent=0x14621557 SizeRef=1285,701 Split=Y
-    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1280,1064 Split=X Selected=0x85FD66EC
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=323,498 Selected=0xB8729153
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=960,498 CentralNode=1 Selected=0x85FD66EC
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1280,1064 Split=X Selected=0xB8729153
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=330,650 CentralNode=1 Selected=0xB8729153
+      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=953,650 Selected=0x85FD66EC
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1280,284 Selected=0x086A1005
   DockNode      ID=0x00000004 Parent=0x14621557 SizeRef=341,701 Selected=0xB576AE73
 DockSpace       ID=0xC0DFADC4 Pos=0,19 Size=1280,701 CentralNode=1 Selected=0x4A68580B
