--- a/SuperGameEngine/SuperGameEngine/imgui.ini
+++ b/SuperGameEngine/SuperGameEngine/imgui.ini
@@ -128,6 +128,11 @@ Pos=729,442
 Size=101,71
 Collapsed=0
 
+[Window][Selectable Popup]
+Pos=767,442
+Size=93,71
+Collapsed=0
+
 [Table][0x51D6F5EA,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
